--- a/frontend/src/pages/authenticate/authenticate.css
+++ b/frontend/src/pages/authenticate/authenticate.css
@@ -1,3 +1,16 @@
+::placeholder {
+    color: #bcbecb;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+color: #bcbecb;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+color: #bcbecb;
+}
+
 input {
     display: block;
     border: none;
@@ -7,7 +20,6 @@ input {
     box-sizing: border-box;
     margin: 10px 0;
     padding: 15px;
-    color: #bcbecb;
     background-color: #f1f5fb;
 }
 
