--- a/frontend/src/pages/authenticate/authenticate.css
+++ b/frontend/src/pages/authenticate/authenticate.css
@@ -11,16 +11,59 @@ color: #bcbecb;
 color: #bcbecb;
 }
 
+textarea:focus, input:focus{
+    outline: none;
+}
+
 input {
     display: block;
     border: none;
     text-decoration: none;
     width: 100%;
+    height: 50px;
     font-size: 13px;
     box-sizing: border-box;
-    margin: 10px 0;
-    padding: 15px;
     background-color: #f1f5fb;
+    padding-left: 15px;
+}
+
+.input-container {
+    display: flex;
+    margin: 10px 0;
+}
+
+.input-container > .icon {
+    background-color: #f1f5fb;
+    font-size: 20px;
+    padding: 0 15px;
+    padding-top: 14px;
+    font-size: 22px;
+    color: #bcbecb;
+    cursor: pointer;
+}
+
+.password-hint-container {
+    font-size: 14px;
+    margin: 20px 0;
+    color: #bcbecb;
+    margin-left: 10px;
+}
+
+.password-hint-container > div{
+    display: flex;
+}
+
+.password-hint-container > div > div:first-child{
+    padding-top: 1px;
+}
+
+.password-hint-container label {
+    margin-left: 5px;
+}
+
+
+.input-container > .icon:hover {
+    color: #9c9eaa;
 }
 
 .btn1 {
