--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 :root {
     --main: #4579f7;
     --main-hover: #4981f9;
-    --border-radius: 2px;
+    --border-radius: 5px;
 }
 
 * {
@@ -55,3 +55,13 @@ a:hover {
 .btn1:hover {
     background-color: var(--main-hover);
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
