--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,8 +13,6 @@
 #root {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
 }
 
 body, html {
@@ -25,9 +23,23 @@ body, html {
     height: 100%;
 }
 
+input {
+    display: block;
+    border: none;
+    text-decoration: none;
+    width: 100%;
+    height: 50px;
+    font-size: 13px;
+    box-sizing: border-box;
+    background-color: #f1f5fb;
+    padding-left: 15px;
+    border-radius: var(--border-radius);
+}
+
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: bolder;
+    font-size: 30px;
 }
 
 a {
@@ -64,4 +76,12 @@ a:hover {
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
-  }
+}
+
+
+
+/* UK */
+.uk-container { 
+    max-width: 350px;
+    margin-top: 150px;
+}
