--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,17 +10,11 @@
     border-radius: var(--border-radius);
 }
 
-#root {
-    width: 100%;
-    height: 100%;
-}
 
 body, html {
     margin: 0;
     padding: 0;
     background-color: #ecedf6;
-    width: 100%;
-    height: 100%;
 }
 
 input {
@@ -39,7 +33,9 @@ input {
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: bolder;
-    font-size: 30px;
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -52,7 +48,6 @@ a:hover {
 }
 
 .btn1 {
-    background-color: var(--main);
     border: none;
     width: 100%;
     color: white;
@@ -64,10 +59,6 @@ a:hover {
     cursor: pointer;
 }
 
-.btn1:hover {
-    background-color: var(--main-hover);
-}
-
 .noselect {
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Safari */
@@ -76,12 +67,4 @@ a:hover {
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
-}
-
-
-
-/* UK */
-.uk-container { 
-    max-width: 350px;
-    margin-top: 150px;
 }
