--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,70 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto&display=swap');
 :root {
-    --main: #4579f7;
-    --main-hover: #4981f9;
-    --border-radius: 5px;
+  --background-color: #f1f1f1;
+  --main: #4579f7;
+  --main-hover: #4981f9;
+  --border-radius: 5px;
 }
-
-* {
-    font-family: 'Roboto', sans-serif;
-    border-radius: var(--border-radius);
-}
-
 
 body, html {
-    margin: 0;
-    padding: 0;
-    background-color: #ecedf6;
-}
-
-input {
-    display: block;
-    border: none;
-    text-decoration: none;
-    width: 100%;
-    height: 50px;
-    font-size: 13px;
-    box-sizing: border-box;
-    background-color: #f1f5fb;
-    padding-left: 15px;
-    border-radius: var(--border-radius);
-}
-
-h1 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bolder;
-    font-size: 25px;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    color: var(--main);
-    text-decoration: none;
-}
-
-a:hover {
-    color: var(--main-hover);
-}
-
-.btn1 {
-    border: none;
-    width: 100%;
-    color: white;
-    padding: 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    cursor: pointer;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color);
 }
 
 .noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome, Edge, Opera and Firefox */
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+}
+
+p {
+  word-break: break-all;
+  white-space: normal;
 }
